--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mrleebo/prisma-ast": "^0.13.0",
     "@prisma/client": "^4.9.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.9.2"
   }
 }
