--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "seed": "npx tsc && node dist/prisma/seed.js",
+    "migrate": "npx prisma migrate dev",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
@@ -20,13 +21,17 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^18.11.18",
+    "@types/swagger-ui-express": "^4.1.8",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "prisma": "^6.13.0",
